--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,3 +1,4 @@
+@if(isReady() === true) {
 <div class="bg-gray-50 flex flex-col gap-4 max-w-md mx-auto">
     <h1 class="text-xl font-bold text-center text-gray-800 mb-4">Tổng quan tài chính</h1>
 
@@ -5,15 +6,15 @@
     <div class="bg-white p-4 rounded-2xl shadow-sm flex flex-col gap-2">
         <div class="flex justify-between items-center">
             <span class="text-gray-600">Tổng tiền mặt (tháng)</span>
-            <span class="font-semibold text-gray-800">{{ sheetStats().total_cash }}đ</span>
+            <span class="font-semibold text-gray-800">{{ sheetStats().total_cash | number }}đ</span>
         </div>
         <div class="flex justify-between items-center">
             <span class="text-gray-600">Đã dùng</span>
-            <span class="text-red-600 font-medium">{{ sheetStats().used_cash }}đ</span>
+            <span class="text-red-600 font-medium">{{ sheetStats().used_cash | number }}đ</span>
         </div>
         <div class="flex justify-between items-center border-t pt-2 mt-2">
             <span class="font-semibold text-gray-700">Còn lại</span>
-            <span class="text-green-600 font-bold">{{ sheetStats().remaining_cash }}đ</span>
+            <span class="text-green-600 font-bold">{{ sheetStats().remaining_cash | number }}đ</span>
         </div>
     </div>
 
@@ -21,15 +22,15 @@
     <div class="bg-white p-4 rounded-2xl shadow-sm flex flex-col gap-2">
         <div class="flex justify-between items-center">
             <span class="text-gray-600">Tổng tiền ngân hàng (tháng)</span>
-            <span class="font-semibold text-gray-800">{{ sheetStats().total_bank }}đ</span>
+            <span class="font-semibold text-gray-800">{{ sheetStats().total_bank | number }}đ</span>
         </div>
         <div class="flex justify-between items-center">
             <span class="text-gray-600">Đã dùng</span>
-            <span class="text-red-600 font-medium">{{ sheetStats().used_bank }}đ</span>
+            <span class="text-red-600 font-medium">{{ sheetStats().used_bank | number }}đ</span>
         </div>
         <div class="flex justify-between items-center border-t pt-2 mt-2">
             <span class="font-semibold text-gray-700">Còn lại</span>
-            <span class="text-green-600 font-bold">{{ sheetStats().remaining_bank }}đ</span>
+            <span class="text-green-600 font-bold">{{ sheetStats().remaining_bank | number }}đ</span>
         </div>
     </div>
 
@@ -38,6 +39,7 @@
         class="bg-linear-to-r from-green-400 to-green-600 text-white p-4 rounded-2xl shadow-md flex justify-between items-center mt-2"
     >
         <span class="font-semibold text-lg">Tổng tiền còn lại</span>
-        <span class="font-bold text-xl">{{ sheetStats().total_remaining }}đ</span>
+        <span class="font-bold text-xl">{{ sheetStats().total_remaining | number }}đ</span>
     </div>
 </div>
+}
